@@ -1,5 +1,5 @@
 ## plugins to build by type
-plugins.type.request = zm_google_adsense,zm_google_analytics,zm_useo2,zm_useo3,zm_imagehandler2,zm_captcha,zm_product_music_info,zm_crossell,zm_google_store_locator,zm_master_password,zm_recaptcha,zm_phpbb2,zm_pretty_links,zm_page_cache,zm_site_switch,zm_hoverbox3,zm_page_stats,zm_multi_qty,zm_cron,zm_openid,zm_wordpress,zm_dual_pricing,zm_tests,zm_auto_login,zm_geo_ip,zm_ssu,zm_firephp,zm_whos_online,zm_phpbb3,zm_form_handler,zm_theme_switch,zm_settings,zm_toggle_zm_themes,zm_deprecated,zm_fual_slimbox,zm_vbulletin,zm_subscriptions,
+plugins.type.request = zm_google_adsense,zm_google_analytics,zm_useo2,zm_useo3,zm_imagehandler2,zm_captcha,zm_product_music_info,zm_crossell,zm_google_store_locator,zm_master_password,zm_recaptcha,zm_phpbb2,zm_pretty_links,zm_page_cache,zm_site_switch,zm_hoverbox3,zm_page_stats,zm_multi_qty,zm_cron,zm_openid,zm_wordpress,zm_dual_pricing,zm_tests,zm_auto_login,zm_geo_ip,zm_ssu,zm_firephp,zm_whos_online,zm_phpbb3,zm_form_handler,zm_theme_switch,zm_settings,zm_toggle_zm_themes,zm_deprecated,zm_fual_slimbox,zm_vbulletin,zm_subscriptions,zm_minify
 plugins.type.order_total = zm_payment_surcharge,
 
 ## plugin version numbers
@@ -46,3 +46,4 @@ plugins.zm_scaffold.version = 0.1.1
 plugins.zm_fual_slimbox.version = 0.1.1
 plugins.zm_vbulletin.version = 0.1.0
 plugins.zm_subscriptions.version = 0.1.0
+plugins.zm_minify.version = 0.1.0
